GFG is pending in the React Rest of this done

--- a/src/web.css
+++ b/src/web.css
@@ -539,7 +539,7 @@ nav ul li a {
 
 /* It is from The Html ( Yt , Ud , co , bp , gfg ) etc..... Top 10 Links */
 
-.html_yt_heading,.html_co_heading,.html_ud_heading,.html_gfg_heading{
+.html_yt_heading,.html_co_heading,.html_ud_heading,.html_gfg_heading,.html_qns_heading{
 
     font-size: 30px;
     text-align: center;
